feat: add gvm nvm

--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -1,3 +1,8 @@
+[scriptEnv]
+    GO_VERSION = "1.23.7"
+    PYTHON_VERSION = "3.13.2"
+    NODE_JS_VERSION = "22.14.0"
+
 [hooks.read-source-state.pre]
     command = ".local/share/chezmoi/home/.install-prerequisites.sh"
 
