--- a/home/dot_zshrc.tmpl
+++ b/home/dot_zshrc.tmpl
@@ -73,3 +73,8 @@ export GITHUB_ACCESS_TOKEN={{ onepasswordRead "op://Personal/GitHub API Token/to
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
+
+export NVM_DIR="$HOME/.config/nvm"
+[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+
+[ -f ~/.gvm/scripts/gvm ] && source ~/.gvm/scripts/gvm
