--- a/home/.chezmoiscripts/darwin/run_onchange_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/darwin/run_onchange_install-packages.sh.tmpl
@@ -15,4 +15,4 @@ EOF
 
 GVM_NO_UPDATE_PROFILE=1 bash < <(curl -LsSf 'https://raw.githubusercontent.com/moovweb/gvm/master/binscripts/gvm-installer')
 [ -f ~/.gvm/scripts/gvm ] && source ~/.gvm/scripts/gvm
-gvm install go1.21.0 -B && gvm use go1.21.0 && gvm install go${GO_VERSION} && gvm use go${GO_VERSION} --default
+brew install go && gvm install go${GO_VERSION} && brew uninstall go && gvm use go${GO_VERSION} --default
