--- a/home/dot_local/bin/executable_git-cz.tmpl
+++ b/home/dot_local/bin/executable_git-cz.tmpl
@@ -1,3 +1,3 @@
 #!/bin/sh
 {{ $config := joinPath .chezmoi.homeDir ".config" ".czrc" -}}
-npx czg {{ if stat $config }}--config={{ toString $config }}{{ end }} "$@"
+npx czg --config={{ toString $config }} "$@"
