--- a/home/.chezmoiscripts/linux/run_onchange_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_install-packages.sh.tmpl
@@ -2,6 +2,6 @@
 
 # scriptEnv hash: {{ .chezmoi.config.scriptEnv | quote | sha256sum }}
 
-GVM_NO_UPDATE_PROFILE=1 bash < <(curl -LsSf 'https://raw.githubusercontent.com/moovweb/gvm/master/binscripts/gvm-installer')
+[ -f ~/.gvm/scripts/gvm ] || GVM_NO_UPDATE_PROFILE=1 bash < <(curl -LsSf 'https://raw.githubusercontent.com/moovweb/gvm/master/binscripts/gvm-installer')
 [ -f ~/.gvm/scripts/gvm ] && source ~/.gvm/scripts/gvm
-gvm install go1.21.0 -B && gvm use go1.21.0 && gvm install go${GO_VERSION} && gvm use go${GO_VERSION} --default
+[ "$(command -v go)" ] || (gvm install go1.21.0 -B && gvm use go1.21.0 && gvm install go${GO_VERSION} && gvm use go${GO_VERSION} --default)
