feat: add k6 zsh completion template if k6 is in PATH

--- a/home/.chezmoiignore.tmpl
+++ b/home/.chezmoiignore.tmpl
@@ -15,3 +15,7 @@
 {{ if ne .chezmoi.os "linux" }}
 .chezmoiscripts/linux/**
 {{ end }}
+
+{{ if not ( lookPath "k6" ) }}
+.oh-my-zsh/completions/_k6.tmpl
+{{ end }}
