--- a/home/dot_zshrc.tmpl
+++ b/home/dot_zshrc.tmpl
@@ -49,9 +49,8 @@ ZSH_DISABLE_COMPFIX=true
 # Example format: plugins=(rails git textmate ruby lighthouse)
 # Add wisely, as too many plugins slow down shell startup.
 plugins=(
-{{- range .zshPlugins }}
-  {{ . }}
-{{- end }}
+  zsh-syntax-highlighting
+  git-open
   extract
   git
   golang
