--- a/home/dot_local/bin/executable_git-cz.tmpl
+++ b/home/dot_local/bin/executable_git-cz.tmpl
@@ -1,3 +1,3 @@
 #!/bin/sh
-{{ $config := joinPath .chezmoi.homeDir ".config" ".czrc" -}}
+{{ $config := joinPath .chezmoi.homeDir ".config" ".cz_config.js" -}}
 npx czg --config={{ toString $config }} "$@"
