--- a/home/private_dot_config/dot_cz_config.js.tmpl
+++ b/home/private_dot_config/dot_cz_config.js.tmpl
@@ -65,7 +65,7 @@ module.exports = {
   openAIToken: "{{ .ai.token }}",
   apiEndpoint: "{{ .ai.endpoint }}",
   apiModel: "{{ .ai.model }}",
-  aiNumber: 5,
+  aiNumber: {{ .ai.number }},
   aiQuestionCB: ({
     maxSubjectLength,
     upperCaseSubject,
