feat: add lazy-lock.json to ignore list and create debug breakpoint command for neotest

--- a/home/.chezmoiignore.tmpl
+++ b/home/.chezmoiignore.tmpl
@@ -9,6 +9,7 @@
 .oh-my-zsh/custom/themes/powerlevel10k/**/*.zwc
 
 **/noexact_*
+.config/nvim/lazy-lock.json
 
 {{ if ne .chezmoi.os "darwin" }}
 .chezmoiscripts/darwin/**
