--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -14,6 +14,7 @@ zshPlugins = [
     "brew",
     "helm",
     "kubectl",
+    "autoswitch_virtualenv",
 ]
 
 githubToken = "{{ onepasswordRead "op://Personal/GitHub API Token/token" | trim }}"
