feat: remove powerlevel10k theme and configuration while adding starship prompt

--- a/home/dot_zshrc.tmpl
+++ b/home/dot_zshrc.tmpl
@@ -32,7 +32,7 @@ export ZSH=$HOME/.oh-my-zsh
 # Set name of the theme to load. Optionally, if you set this to "random"
 # it'll load a random theme each time that oh-my-zsh is loaded.
 # See https://github.com/robbyrussell/oh-my-zsh/wiki/Themes
-ZSH_THEME="powerlevel10k/powerlevel10k"
+ZSH_THEME=""
 
 # Uncomment the following line to use case-sensitive completion.
 CASE_SENSITIVE="true"
@@ -107,4 +107,8 @@ source "$HOME/.cargo/env"
 
 {{- if eq .chezmoi.os "darwin" }}
 export DYLD_LIBRARY_PATH="$(brew --prefix)/lib:$DYLD_LIBRARY_PATH"
+{{- end }}
+
+{{- if lookPath "starship" }}
+eval "$(starship init zsh)"
 {{- end }}
