--- a/home/dot_zshrc.tmpl
+++ b/home/dot_zshrc.tmpl
@@ -112,3 +112,6 @@ export DYLD_LIBRARY_PATH="$(brew --prefix)/lib:$DYLD_LIBRARY_PATH"
 {{- if lookPath "starship" }}
 eval "$(starship init zsh)"
 {{- end }}
+
+export LANG=zh_CN.utf8
+export LC_ALL=zh_CN.utf8
