feat: make bat alias use plain mode with `-p` flag

--- a/home/dot_zshrc.tmpl
+++ b/home/dot_zshrc.tmpl
@@ -70,7 +70,7 @@ source $ZSH/oh-my-zsh.sh
 # User configuration
 
 {{- if lookPath "bat" }}
-alias cat='bat'
+alias cat='bat -p'
 {{- end }}
 {{- if lookPath "eza" }}
 alias ls='eza --icons=auto'
