feat: update 1password-cli installation method and reorganize gvm setup in package scripts

--- a/home/.chezmoiscripts/linux/run_onchange_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_install-packages.sh.tmpl
@@ -1,8 +1,4 @@
 #!/bin/bash
 
-# softwares hash: {{ .data.softwares | toString | sha256sum }}
+# {{ now | date "2006-01" | sha256sum }}
 
-[ -f ~/.gvm/scripts/gvm ] || GVM_NO_UPDATE_PROFILE=1 bash < <(curl -LsSf 'https://raw.githubusercontent.com/cndoit18/gvm/master/binscripts/gvm-installer')
-[ -f ~/.gvm/scripts/gvm ] && source ~/.gvm/scripts/gvm
-[ "$(command -v go)" ] || (gvm install go1.21.0 -B && gvm use go1.21.0)
-gvm install go{{ .data.softwares.go }} && gvm use go{{ .data.softwares.go }} --default
