--- a/home/.chezmoiscripts/run_onchange_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/run_onchange_install-packages.sh.tmpl
@@ -1,7 +1,11 @@
 #!/bin/bash
-set -e
 
 # softwares hash: {{ .data.softwares | toString | sha256sum }}
+
+[ -f ~/.gvm/scripts/gvm ] || GVM_NO_UPDATE_PROFILE=1 bash < <(curl -LsSf 'https://raw.githubusercontent.com/cndoit18/gvm/master/binscripts/gvm-installer')
+[ -f ~/.gvm/scripts/gvm ] && source ~/.gvm/scripts/gvm
+[ "$(command -v go)" ] || (gvm install go1.21.0 -B && gvm use go1.21.0)
+gvm install go{{ .data.softwares.go }} && gvm use go{{ .data.softwares.go }} --default
 
 [ -f ~/.local/bin/uv ] || UV_NO_MODIFY_PATH=1 bash < <(curl -LsSf 'https://astral.sh/uv/{{ (gitHubLatestRelease "astral-sh/uv").TagName }}/install.sh')
 ~/.local/bin/uv python install --default --preview {{ .data.softwares.python }}
