feat: add mercurial, bison, and fuse to required packages for linux installation

--- a/home/.chezmoiscripts/linux/run_onchange_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_install-packages.sh.tmpl
@@ -2,3 +2,17 @@
 
 # {{ now | date "2006-01" | sha256sum }}
 
+required_commands=(
+	mercurial
+	bison
+	fuse
+)
+
+if [[ -n "$(command -v apt-get)" ]]; then
+	required_commands+=(
+	)
+
+	apt-get update
+	apt-get install -y "${required_commands[@]}"
+
+fi
