--- a/home/.chezmoiscripts/linux/run_onchange_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_install-packages.sh.tmpl
@@ -12,7 +12,7 @@ if [[ -n "$(command -v apt-get)" ]]; then
 	required_commands+=(
 	)
 
-	apt-get update
-	apt-get install -y "${required_commands[@]}"
+	sudo apt-get update
+	sudo apt-get install -y "${required_commands[@]}"
 
 fi
