--- a/home/private_dot_config/exact_lazygit/config.yml.tmpl
+++ b/home/private_dot_config/exact_lazygit/config.yml.tmpl
@@ -6,7 +6,7 @@ customCommands:
     loadingText: "opening commitizen commit tool"
     output: terminal
   - key: "G"
-    command: "git cz ai"
+    command: "opencommit"
     description: "generate commit message"
     context: "files"
     loadingText: "opening commitizen commit tool"
