feat(config): add custom headers support for AI API integration in opencommit and nvim plugins

--- a/home/private_dot_config/exact_nvim/exact_lua/exact_plugins/avante.lua.tmpl
+++ b/home/private_dot_config/exact_nvim/exact_lua/exact_plugins/avante.lua.tmpl
@@ -20,9 +20,13 @@ return {
 				extra_request_body = {
 					temperature = 0.75,
 				},
+				extra_headers = {
+				-- {{ range $key, $value := .ai.header }}
+					["{{ $key }}"] = "{{ $value }}",
+				-- {{ end }}
+				},
 			},
 		},
-		mappings = {},
 	},
 	dependencies = {
 		"nvim-lua/plenary.nvim",
