--- a/home/dot_opencommit.tmpl
+++ b/home/dot_opencommit.tmpl
@@ -2,3 +2,4 @@ OCO_API_KEY={{ .ai.token }}
 OCO_API_URL={{ .ai.endpoint | trimSuffix " / " }}/v1
 OCO_MODEL={{ .ai.model }}
 OCO_GITPUSH=false
+OCO_API_CUSTOM_HEADERS='{{ toJson .ai.header }}'
