--- a/home/dot_opencommit.tmpl
+++ b/home/dot_opencommit.tmpl
@@ -1,3 +1,4 @@
+OCO_AI_PROVIDER=openai
 OCO_API_KEY={{ .ai.token }}
 OCO_API_URL={{ .ai.endpoint | trimSuffix " / " }}/v1
 OCO_MODEL={{ .ai.model }}
