--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -23,4 +23,5 @@ githubToken = "{{ onepasswordRead "op://Personal/GitHub API Token/token" | trim 
 token = {{ onepasswordRead "op://Personal/LLM/credential" | trim | quote }}
 endpoint = {{ onepasswordRead "op://Personal/LLM/url" | trim | quote }}
 model = {{ onepasswordRead "op://Personal/LLM/gpjtgaxoirmlfznm3pvomfvpy4" | trim | quote }}
+nothink_model = {{ onepasswordRead "op://Personal/LLM/cqpyko5q6bwdij5zkrsqowrera" | trim | quote }}
 number = 5
