--- a/home/dot_local/bin/executable_kimi.tmpl
+++ b/home/dot_local/bin/executable_kimi.tmpl
@@ -1,2 +1,3 @@
 #!/bin/sh
-uvx --from kimi-cli --python 3.13 kimi "$@"
+{{ $config := joinPath .chezmoi.homeDir ".kimi" "mcp-config.json" -}}
+uvx --from kimi-cli --python 3.13 kimi --mcp-config-file {{ toString $config }} "$@"
