--- a/home/private_dot_config/exact_lazygit/config.yml.tmpl
+++ b/home/private_dot_config/exact_lazygit/config.yml.tmpl
@@ -13,7 +13,7 @@ customCommands:
     output: terminal
 {{- if lookPath "delta" }}
 git:
-  paging:
-    colorArg: always
-    pager: delta --dark --paging=never --line-numbers
+  pagers::
+    - colorArg: always
+      pager: delta --dark --paging=never --line-numbers
 {{- end }}
